--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "develop": "watched-sdk start"
   },
   "dependencies": {
-    "@watchedcom/sdk": "^0.21.3",
-    "cheerio": "^1.0.0-rc.3"
+    "@watchedcom/sdk": "^0.21.4",
+    "qs": "^6.9.3"
   },
   "devDependencies": {
-    "@types/cheerio": "^0.22.17",
+    "@types/qs": "^6.9.1",
     "husky": "^4.2.3",
     "lint-staged": "^10.0.9",
     "prettier": "^2.0.2",
