--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "@watchedcom/sdk": "^0.21.4",
-    "qs": "^6.9.3"
+    "qs": "^6.9.3",
+    "striptags": "^3.1.1"
   },
   "devDependencies": {
     "@types/qs": "^6.9.1",
