--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "0.0.0",
   "main": "dist",
   "scripts": {
+    "now-build": "watched-sdk now-build",
     "build": "tsc",
     "start": "watched-sdk start --single --prod",
     "develop": "watched-sdk start --single"
   },
   "dependencies": {
-    "@watchedcom/sdk": "^0.25.2",
+    "@watchedcom/sdk": "^0.26.8",
     "cheerio": "^0.22.0",
     "qs": "^6.9.3",
     "striptags": "^3.1.1"
